yaml_parser/tests/fail/invalid-comma-in-tag.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 1, column 8
  |
1 | - !!str, xxx
  |        ^
expected `...`
